[package]
name = "ebustl"
version = "0.2.0"
description = "Parse subtitle files in the EBU-STL format with Rust."
authors = ["Christophe Augier <christophe.augier@gmail.com>"]
license = "MIT"
repository = "https://github.com/tytouf/ebustl-rs"
readme = "README.md"
keywords = ["stl", "subtitle", "parser"]
categories = ["multimedia:video", "parser-implementations"]
edition = "2021"

[dependencies]
nom = "7.1.1"
iso6937 = "^0.1"
chrono = "0.4"
thiserror = "1.0"                                                               
codepage-strings = "1.0.2"

